@@ -3,8 +3,3 @@
 # 
 #
 
-* add tests for has and readv (_get_full wasn't addressed
-   by jam's patch but _get_ranged should be reported twice currently).
-
-* complete _ReportingFileSocket implementation for write
-   operations ?
