@@ -245,8 +245,7 @@ class PyCurlTransport(HttpTransportBase):
                                           'Server return code %d'
                                           % curl.getinfo(pycurl.HTTP_CODE))
         msg = self._parse_headers(header)
-        return code, response.handle_response(abspath, code, msg, data,
-            report_activity=self._report_activity)
+        return code, response.handle_response(abspath, code, msg, data)
 
     def _parse_headers(self, status_and_headers):
         """Transform the headers provided by curl into an HTTPMessage"""
@@ -286,8 +285,7 @@ class PyCurlTransport(HttpTransportBase):
         data.seek(0)
         code = curl.getinfo(pycurl.HTTP_CODE)
         msg = self._parse_headers(header)
-        return code, response.handle_response(abspath, code, msg, data,
-            report_activity=self._report_activity)
+        return code, response.handle_response(abspath, code, msg, data)
 
 
     def _raise_curl_http_error(self, curl, info=None):
