@@ -67,18 +67,15 @@ class RangeFile(object):
     # maximum size of read requests -- used to avoid MemoryError issues in recv
     _max_read_size = 512 * 1024
 
-    def __init__(self, path, infile, report_activity=None):
+    def __init__(self, path, infile):
         """Constructor.
 
         :param path: File url, for error reports.
         :param infile: File-like socket set at body start.
-        :param report_activity: A Transport._report_activity function to call
-            as bytes are read.
         """
         self._path = path
         self._file = infile
         self._boundary = None
-        self._report_activity = report_activity
         # When using multi parts response, this will be set with the headers
         # associated with the range currently read.
         self._headers = None
@@ -231,8 +228,7 @@ class RangeFile(object):
             limited = self._start + self._size - self._pos
             if size >= 0:
                 limited = min(limited, size)
-        osutils.pumpfile(self._file, buffer, limited, self._max_read_size,
-            report_activity=self._report_activity, direction='read')
+        osutils.pumpfile(self._file, buffer, limited, self._max_read_size)
         data = buffer.getvalue()
 
         # Update _pos respecting the data effectively read
@@ -281,7 +277,7 @@ class RangeFile(object):
         return self._pos
 
 
-def handle_response(url, code, msg, data, report_activity=None):
+def handle_response(url, code, msg, data):
     """Interpret the code & headers and wrap the provided data in a RangeFile.
 
     This is a factory method which returns an appropriate RangeFile based on
@@ -295,7 +291,7 @@ def handle_response(url, code, msg, data, report_activity=None):
     :return: A file-like object that can seek()+read() the 
              ranges indicated by the headers.
     """
-    rfile = RangeFile(url, data, report_activity=report_activity)
+    rfile = RangeFile(url, data)
     if code == 200:
         # A whole file
         size = msg.getheader('content-length', None)
